Fix: Hero styling in russian and kazakh language on small screen

--- a/src/blocks/Hero/hero.scss
+++ b/src/blocks/Hero/hero.scss
@@ -128,6 +128,10 @@
     .btn--store:nth-of-type(2) {
       margin-top: $spacing_1_6;
     }
+
+    &--padding-bottom {
+      padding-bottom: $spacing_24_0;
+    }
   }
 
   &__collage-item {
